--- a/spring-boot-docker/pom.xml
+++ b/spring-boot-docker/pom.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.5.2</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.zensar</groupId>
 	<artifactId>spring-boot-docker</artifactId>
@@ -29,13 +30,36 @@
 		</dependency>
 	</dependencies>
 
+	
+
+
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+		<groupId>com.spotify</groupId>
+		<artifactId>dockerfile-maven-plugin</artifactId>
+		<executions>
+			<execution>
+				<id>default</id>
+				<goals>
+					<goal>build</goal>
+					<goal>push</goal>
+				</goals>
+			</execution>
+		</executions>
+		<configuration>
+			<repository>sharadrajore/spring-boot</repository>
+			<tag>${project.version}</tag>
+			<buildArgs>
+				<JAR_FILE>
+	${project.build.finalName}.jar</JAR_FILE>
+			</buildArgs>
+		</configuration>
+	</plugin>
 		</plugins>
 	</build>
-
 </project>
